--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
-    "express": "^4.18.2",
+    "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
     "jimp": "^0.22.8",
     "jquery": "^3.7.0",
@@ -43,9 +43,9 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build && next export",
-    "start": "node .next/standalone/server.js",
+    "start": "node server.js -p $PORT",
     "prod": "next build && node .next/standalone/server.js"
   },
   "author": "Zeiu",
@@ -54,7 +54,5 @@
     "@types/react": "18.2.12",
     "typescript": "5.1.3"
   },
-  "cacheDirectories": [
-    ".next/cache"
-  ]
+  "cacheDirectories": [".next/cache"]
 }
