--- a/package.json
+++ b/package.json
@@ -54,5 +54,7 @@
     "@types/react": "18.2.12",
     "typescript": "5.1.3"
   },
-  "cacheDirectories": [".next/cache"]
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
