--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-palette": "^1.0.2",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.1",
