--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "4.6.2",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-palette": "^1.0.2",
+    "react-query": "^3.39.3",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.1",
     "swr": "^2.1.5",
@@ -51,6 +52,8 @@
   },
   "author": "Zeiu",
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.71",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "typescript": "5.1.3"
